tests/ui/coherence/impl-coherence-error-for-undefined-type-issue-18058.rs
impl Undefined {}
//~^ ERROR cannot find type `Undefined` in this scope

fn main() {}

// https://github.com/rust-lang/rust/issues/18058
